[tool.poetry]
name = "homework-9"
version = "0.1.0"
description = ""
authors = ["Sholpan Bakhtybekkyzy <pasadena2929@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jwt = "^1.3.1"
poetry = "^1.7.1"
pyjwt = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
